# capstone_project_II

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.flow/: .checkpoint-fn-10-7x6.json  .checkpoint-fn-11-ovf.json  .checkpoint-fn-9-img.json
.flow/epics/: fn-1-fgh.json  fn-10-7x6.json  fn-11-ovf.json  fn-2-38p.json  fn-3-4ho.json  fn-4-google-calendar-integration.md  fn-4-gyw.json  fn-5-pipeline-orchestration.md  fn-5-vqs.json  fn-6-m69.json  fn-7-1hq.json  fn-8-vyv.json  fn-9-img.json
.flow/specs/: fn-1-fgh.md  fn-10-7x6.md  fn-11-ovf.md  fn-2-38p.md  fn-3-4ho.md  fn-6-m69.md  fn-7-1hq.md  fn-8-vyv.md  fn-9-img.md
.flow/tasks/: fn-1-fgh.1.json  fn-1-fgh.1.md  fn-1-fgh.10.json  fn-1-fgh.10.md  fn-1-fgh.11.json  fn-1-fgh.11.md  fn-1-fgh.12.json  fn-1-fgh.12.md  fn-1-fgh.2.json  fn-1-fgh.2.md  fn-1-fgh.3.json  fn-1-fgh.3.md  fn-1-fgh.4.json  fn-1-fgh.4.md  fn-1-fgh.5.json  fn-1-fgh.5.md  fn-1-fgh.6.json  fn-1-fgh.6.md  fn-1-fgh.7.json  fn-1-fgh.7.md  fn-1-fgh.8.json  fn-1-fgh.8.md  fn-1-fgh.9.json  fn-1-fgh.9.md  fn-10-7x6.1.json  fn-10-7x6.1.md  fn-10-7x6.2.json  fn-10-7x6.2.md  fn-10-7x6.3.json  fn-10-7x6.3.md  fn-10-7x6.4.json  fn-10-7x6.4.md  fn-10-7x6.5.json  fn-10-7x6.5.md  fn-11-ovf.1.json  fn-11-ovf.1.md  fn-11-ovf.2.json  fn-11-ovf.2.md  fn-11-ovf.3.json  fn-11-ovf.3.md  (+120 more)
MagicMock/mock.memory_db_path/: 133592986527568
docs/: ARCHITECTURE.md  SPEC.md  architecture_report.aux  architecture_report.out  architecture_report.tex  architecture_report.toc  memory_architectures.aux  memory_architectures.out  memory_architectures.tex  memory_system_design.aux  memory_system_design.out  memory_system_design.tex
reports/: iteration_log.md
samples/: ambiguous_time.txt  complex.txt  multiple_events_copy.txt  no_events.txt
samples/adversarial/: hypothetical.expected.json  hypothetical.txt  mixed_signals.expected.json  mixed_signals.txt  negation.expected.json  negation.txt  no_events.expected.json  past_tense.expected.json  past_tense.txt  sarcasm.expected.json  sarcasm.txt  vague_reference.expected.json  vague_reference.txt
samples/crud/: ambiguous_reference.expected.json  ambiguous_reference.txt  bulk_delete.expected.json  bulk_delete.txt  cancel_event.expected.json  cancel_event.txt  cancellation.expected.json  cancellation.txt  clear_schedule.expected.json  clear_schedule.txt  conflicting_instructions.expected.json  conflicting_instructions.txt  mixed_crud.txt  (+15 more)
tests/: conftest.py
(+370 files in other folders)
