[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cal-ai"
version = "0.1.0"
description = "Conversation-to-Calendar AI: extracts calendar events from conversation transcripts"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "google-genai>=1.0.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.0",
    "rapidfuzz>=3.0",
    "ruff>=0.9",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cal_ai.web" = ["templates/*.html", "templates/.keep", "static/*.css", "static/*.js", "static/.keep"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --cov=cal_ai --cov-report=term-missing"
markers = [
    "live: requires real Gemini API credentials",
    "regression: regression test suite",
    "slow: long-running test",
]
